--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -55,16 +55,14 @@ a:hover {
 }
 
 .project {
-  margin: 0 auto;
-  width: 960px;
+  margin: 0 2em;
   text-align: right;
   padding-top: 1em;
   overflow: hidden;
 }
 
 .container {
-  margin: 1em auto 0;
-  width: 960px;
+  margin: 1em 2em 0;
   padding: 2em;
   box-sizing: border-box;
   background-color: #fff;
@@ -130,7 +128,7 @@ a:hover {
 
 .demo-log {
   margin: 10px auto;
-  height: 170px;
+  height: 180px;
   border: 1px solid #e7e8e9;
   overflow: hidden;
 }
@@ -157,7 +155,7 @@ a:hover {
 }
 
 .list {
-  max-height: 216px;
+  max-height: 814px;
   overflow: auto;
 }
 
@@ -215,83 +213,4 @@ a:hover {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, .15);
-}
-
-@media screen and (max-width: 1024px) {
-  .project {
-    width: 800px;
-  }
-
-  .container {
-    width: 800px;
-  }
-}
-
-@media screen and (max-width: 860px) {
-  .project {
-    width: 720px;
-  }
-
-  .container {
-    width: 720px;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  .project {
-    width: 640px;
-  }
-
-  .container {
-    width: 640px;
-  }
-}
-
-@media screen and (max-width: 680px) {
-  .project {
-    padding: 1em 1em 0;
-    width: auto;
-  }
-
-  .container {
-    margin: 1em;
-    padding: 1em;
-    width: auto;
-  }
-
-  .controls {
-    padding-bottom: 1em;
-  }
-
-  .content {
-    margin-top: 1em;
-  }
-
-  .footer {
-    padding: 0 0 1em;
-  }
-}
-
-@media screen and (max-width: 680px) {
-  .project {
-    width: auto;
-  }
-
-  .container {
-    margin: 1em;
-    padding: 1em;
-    width: auto;
-  }
-
-  .controls {
-    padding-bottom: 1em;
-  }
-
-  .content {
-    margin-top: 1em;
-  }
-
-  .footer {
-    padding: 0 0 1em;
-  }
 }
