feat: 添加 getPageX, getPageXY 和 getPageXY 方法
1. 添加 getPageX, getPageXY 和 getPageXY 方法；
2. 更新 README.md；
3. 调整 Emitter 对象的 on 方法的 jsDoc 规范的注释；

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -111,18 +111,25 @@ a:hover {
   font-size: 14px;
   padding: 0 10px;
   text-align: right;
-  border-bottom: 1px solid #e7e8e9;
   overflow: hidden;
 }
 
 .demo-action,
-.item-remove {
+.remove {
   cursor: pointer;
   color: #01aa95;
   user-select: none;
 }
 
-.item-remove {
+.demo-action {
+  padding-left: 10px;
+}
+
+.demo-action:first-child {
+  padding-left: 0;
+}
+
+.remove {
   float: right;
 }
 
@@ -155,7 +162,9 @@ a:hover {
 }
 
 .list {
-  max-height: 814px;
+  max-height: 684px;
+  border-top: 1px solid #e7e8e9;
+  border-bottom: 1px solid #e7e8e9;
   overflow: auto;
 }
 
