--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -64,6 +64,7 @@ a:hover {
 
 .links {
   text-align: right;
+  padding: 0 1em;
 }
 
 .article {
@@ -71,7 +72,7 @@ a:hover {
   background-color: #fff;
   font-size: 16px;
   line-height: 1.6em;
-  box-shadow: 0 0 10px #eee;
+  box-shadow: 0 0 10px #ededee;
   overflow: hidden;
 }
 
@@ -124,13 +125,13 @@ a:hover {
 .code,
 .textarea{
   font-family: "Courier New", Consolas, Georgia, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 150%;
 }
 
 .code {
   margin: 0;
-  padding: 2em;
+  padding: 1em;
   background-color: #f7f8f9;
   height: 100%;
   border-radius: 4px;
@@ -142,6 +143,10 @@ a:hover {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
+  padding: 1em;
+  border-radius: 4px;
+  box-shadow: 0 0 4px #ddd;
+  overflow: hidden;
 }
 
 .toolbar {
@@ -162,10 +167,11 @@ a:hover {
 }
 
 .action {
+  font-size: 13px;
   padding-left: 10px;
 }
 
-.demo-action:first-child {
+.action:first-child {
   padding-left: 0;
 }
 
@@ -186,7 +192,7 @@ a:hover {
   height: 100%;
   border: none;
   outline: none;
-  padding: 20px;
+  padding: 1em;
   box-sizing: border-box;
   overflow: auto;
 }
@@ -200,9 +206,10 @@ a:hover {
 }
 
 .list {
-  height: 288px;
+  height: 360px;
   border-top: 1px solid #e7e8e9;
   border-bottom: 1px solid #e7e8e9;
+  font-size: 13px;
   overflow: auto;
 }
 
@@ -219,7 +226,7 @@ a:hover {
 
 .footer {
   margin: 0 auto;
-  padding: 2em 0;
+  padding: 0 0 2em;
   text-align: center;
   overflow: hidden;
 }
