--- a/api/less/section.less
+++ b/api/less/section.less
@@ -50,7 +50,7 @@
     position: relative;
     z-index: 1;
     margin: 0 0 0 60px;
-    color: @fourth_text_color;
+    color: @success_color;
     overflow: hidden;
   }
 
@@ -58,7 +58,7 @@
     margin: 2em 0;
     padding: 1em;
     font-size: 14px;
-    line-height: 200%;
+    line-height: 150%;
     text-align: left;
     background-color: @bg_color;
     border: 1px solid @border_color;
