--- a/api/pug/methods/createEvent.pug
+++ b/api/pug/methods/createEvent.pug
@@ -1,6 +1,6 @@
-section#method-createEvent.section
+section.section
   header.section__header
-    h3.section__h3 createEvent(type[, detail = null, bubbles = true, cancelable = true])
+    h3#method-createEvent.section__h3 createEvent(type[, detail = null, bubbles = true, cancelable = true])
   div.section__content
     h4.section__h4 Description
     p 创建自定义事件（CustomerEvent）。
