--- a/api/pug/methods/getCharCode.pug
+++ b/api/pug/methods/getCharCode.pug
@@ -1,6 +1,6 @@
-section#method-getCharCode.section
+section.section
   header.section__header
-    h3.section__h3 getCharCode(evt)
+    h3#method-getCharCode.section__h3 getCharCode(evt)
   div.section__content
     h4.section__h4 Description
     p 返回触发事件的 charCode。
