--- a/api/pug/methods/getRelatedTarget.pug
+++ b/api/pug/methods/getRelatedTarget.pug
@@ -1,6 +1,6 @@
-section#method-getRelatedTarget.section
+section.section
   header.section__header
-    h3.section__h3 getRelatedTarget(evt)
+    h3#method-getRelatedTarget.section__h3 getRelatedTarget(evt)
   div.section__content
     h4.section__h4 Description
     p 返回触发事件的 relatedTarget DOM 元素。
