--- a/api/pug/methods/getTarget.pug
+++ b/api/pug/methods/getTarget.pug
@@ -1,6 +1,6 @@
-section#method-getTarget.section
+section.section
   header.section__header
-    h3.section__h3 getTarget(evt)
+    h3#method-getTarget.section__h3 getTarget(evt)
   div.section__content
     h4.section__h4 Description
     p 返回触发事件的 target DOM 元素。
