--- a/api/pug/methods/on.pug
+++ b/api/pug/methods/on.pug
@@ -1,6 +1,6 @@
-section#method-on.section
+section.section
   header.section__header
-    h3.section__h3 on(selector, type, fn[, data, context, once = false])
+    h3#method-on.section__h3 on(selector, type, fn[, data, context, once = false])
   div.section__content
     h4.section__h4 Description
     p on() 方法用来绑定事件代理处理器。
@@ -56,7 +56,7 @@ section#method-on.section
     h5.section__h4 context
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Object|Boolean
+      dd.section__dd Object | Boolean
     p （可选）事件处理器回调函数的 this 上下文指向：
     ul
       li 当设置为 true 时，则事件处理器回调函数的 this 上下文指向为 data 对象；
