--- a/api/pug/methods/purge.pug
+++ b/api/pug/methods/purge.pug
@@ -1,6 +1,6 @@
-section#method-purge.section
+section.section
   header.section__header
-    h3.section__h3 purge(type[, recurse])
+    h3#method-purge.section__h3 purge(type[, recurse])
   div.section__content
     h4.section__h4 Description
     p 清除 DOM 元素（$el）全部或者指定 type 类型的事件处理器。
