--- a/api/pug/methods/stopEvent.pug
+++ b/api/pug/methods/stopEvent.pug
@@ -1,6 +1,6 @@
-section#method-stopEvent.section
+section.section
   header.section__header
-    h3.section__h3 stopEvent(evt)
+    h3#method-stopEvent.section__h3 stopEvent(evt)
   div.section__content
     h4.section__h4 Description
     p 停止事件（阻止默认行为和阻止事件的捕获或冒泡）。
