--- a/api/pug/methods/stopImmediate.pug
+++ b/api/pug/methods/stopImmediate.pug
@@ -1,6 +1,6 @@
-section#method-stopImmediate.section
+section.section
   header.section__header
-    h3.section__h3 stopImmediate(evt)
+    h3#method-stopImmediate.section__h3 stopImmediate(evt)
   div.section__content
     h4.section__h4 Description
     p 阻止监听同一事件的其他事件监听器被调用，并且阻止默认行为和事件冒泡。
