--- a/api/pug/methods/trigger.pug
+++ b/api/pug/methods/trigger.pug
@@ -1,6 +1,6 @@
-section#method-trigger.section
+section.section
   header.section__header
-    h3.section__h3 trigger(type, selector)
+    h3#method-trigger.section__h3 trigger(type, selector)
   div.section__content
     h4.section__h4 Description
     p trigger() 方法用作手动触（自定义）事件。 trigger() 方法也可以用来手动触发内置的事件，例如 click, mouseenter 等事件，不过通常使用 trigger() 来手动触发用户自定义事件。
