--- a/api/pug/options/el.pug
+++ b/api/pug/options/el.pug
@@ -1,11 +1,11 @@
-div#option-el.section
+div.section
   header.section__header
-    h3.section__h3 el
+    h3#option-el.section__h3 el
   div.section__content
     h4.section__h4 Description
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd HTMLElement|String
+      dd.section__dd HTMLElement | String
     dl.section__dl
       dt.section__dt Default：
       dd.section__dd ''
