--- a/api/less/main.less
+++ b/api/less/main.less
@@ -56,8 +56,10 @@
   &__button {
     display: inline-block;
     border: 1px solid @border_color;
+    border-radius: 4px;
     padding: 14px 29px;
     font-size: 18px;
+    font-family: "Source Code Pro", Consolas, Georgia, Monaco, monospace, Arial, sans-serif;
     background-color: @bg_color;
     overflow: hidden;
 
@@ -66,6 +68,11 @@
     &:hover {
       color: @fourth_text_color;
       text-decoration: none;
+    }
+
+    &:hover {
+      color: @primary_color;
+      border-color: @primary_color;
     }
   }
 
