--- a/api/pug/download.pug
+++ b/api/pug/download.pug
@@ -1,3 +1,3 @@
-div.main__download
+div#download.main__download
   a.main__button(href="https://github.com/yaohaixiao/delegate.js" target="_blank") View on GitHub
 
