--- a/api/pug/methods/destroy.pug
+++ b/api/pug/methods/destroy.pug
@@ -1,6 +1,6 @@
-section#method-destroy.section
+section.section
   header.section__header
-    h3.section__h3 destroy()
+    h3#method-destroy.section__h3 destroy()
   div.section__content
     h4.section__h4 Description
     p 解除 DOM 元素（$el）全部包括子元素的所有事件处理器。
