--- a/api/pug/methods/focusout.pug
+++ b/api/pug/methods/focusout.pug
@@ -1,6 +1,6 @@
-section#method-focusout.section
+section.section
   header.section__header
-    h3.section__h3 focusout(selector, fn[, data, context, once = false])
+    h3#method-focusout.section__h3 focusout(selector, fn[, data, context, once = false])
   div.section__content
     h4.section__h4 Description
     p focusout() 方法用来绑定 focusout（IE） 或者 blur（其它） 代理事件处理器。
@@ -26,7 +26,7 @@ section#method-focusout.section
     h5.section__h4 context
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Object|Boolean
+      dd.section__dd Object | Boolean
     p （可选）事件处理器回调函数的 this 上下文指向：
     ul
       li 当设置为 true 时，则事件处理器回调函数的 this 上下文指向为 data 对象；
