--- a/api/pug/methods/getListeners.pug
+++ b/api/pug/methods/getListeners.pug
@@ -1,6 +1,6 @@
-section#method-getListeners.section
+section.section
   header.section__header
-    h3.section__h3 getListeners([type])
+    h3#method-getListeners.section__h3 getListeners([type])
   div.section__content
     h4.section__h4 Description
     p 获取 DOM 元素（$el）全部或者指定 type 类型的事件处理器相关的（数组）数据。
