--- a/api/pug/methods/getPageX.pug
+++ b/api/pug/methods/getPageX.pug
@@ -1,6 +1,6 @@
-section#method-getPageX.section
+section.section
   header.section__header
-    h3.section__h3 getPageX(evt)
+    h3#method-getPageX.section__h3 getPageX(evt)
   div.section__content
     h4.section__h4 Description
     p 获取事件触发时的 pageX 值。
