--- a/api/pug/methods/getPageXY.pug
+++ b/api/pug/methods/getPageXY.pug
@@ -1,6 +1,6 @@
-section#method-getPageXY.section
+section.section
   header.section__header
-    h3.section__h3 getPageXY(evt)
+    h3#method-getPageXY.section__h3 getPageXY(evt)
   div.section__content
     h4.section__h4 Description
     p 获取事件触发时的 pageX 和 pageY 数组数据。
