--- a/api/pug/methods/getPageY.pug
+++ b/api/pug/methods/getPageY.pug
@@ -1,6 +1,6 @@
-section#method-getPageY.section
+section.section
   header.section__header
-    h3.section__h3 getPageY(evt)
+    h3#method-getPageY.section__h3 getPageY(evt)
   div.section__content
     h4.section__h4 Description
     p 获取事件触发时的 pageY 值。
