--- a/api/pug/methods/getTypes.pug
+++ b/api/pug/methods/getTypes.pug
@@ -1,6 +1,6 @@
-section#method-getTypes.section
+section.section
   header.section__header
-    h3.section__h3 getTypes()
+    h3#method-getTypes.section__h3 getTypes()
   div.section__content
     h4.section__h4 Description
     p 返回已绑定的事件类型的数组（去除名称重复的事件）。
