--- a/api/pug/methods/hasEvent.pug
+++ b/api/pug/methods/hasEvent.pug
@@ -1,6 +1,6 @@
-section#method-hasEvent.section
+section.section
   header.section__header
-    h3.section__h3 hasEvent([type])
+    h3#method-hasEvent.section__h3 hasEvent([type])
   div.section__content
     h4.section__h4 Description
     p 判断是否已经（指定类型的）绑定事件。
