--- a/api/pug/methods/mousemove.pug
+++ b/api/pug/methods/mousemove.pug
@@ -1,6 +1,6 @@
-section#method-mouseover.section
+section.section
   header.section__header
-    h3.section__h3 mouseover(selector, fn[, data, context, once = false])
+    h3#method-mousemove.section__h3 mouseover(selector, fn[, data, context, once = false])
   div.section__content
     h4.section__h4 Description
     p 绑定 mouseover 代理事件。
@@ -26,7 +26,7 @@ section#method-mouseover.section
     h5.section__h4 context
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Object|Boolean
+      dd.section__dd Object | Boolean
     p （可选）事件处理器回调函数的 this 上下文指向：
     ul
       li 当设置为 true 时，则事件处理器回调函数的 this 上下文指向为 data 对象；
