--- a/api/pug/methods/off.pug
+++ b/api/pug/methods/off.pug
@@ -1,6 +1,6 @@
-section#method-off.section
+section.section
   header.section__header
-    h3.section__h3 off(type[, fn])
+    h3#method-off.section__h3 off(type[, fn])
   div.section__content
     h4.section__h4 Description
     p off() 方法用来接触绑定的事件代理处理器。
