--- a/api/pug/methods/preventDefault.pug
+++ b/api/pug/methods/preventDefault.pug
@@ -1,6 +1,6 @@
-section#method-preventDefault.section
+section.section
   header.section__header
-    h3.section__h3 preventDefault(evt)
+    h3#method-preventDefault.section__h3 preventDefault(evt)
   div.section__content
     h4.section__h4 Description
     p 阻止触发绑定事件 DOM 元素的默认行为。
