--- a/api/pug/methods/stopPropagation.pug
+++ b/api/pug/methods/stopPropagation.pug
@@ -1,6 +1,6 @@
-section#method-stopPropagation.section
+section.section
   header.section__header
-    h3.section__h3 stopPropagation(evt)
+    h3#method-stopPropagation.section__h3 stopPropagation(evt)
   div.section__content
     h4.section__h4 Description
     p 终止事件在传播过程的捕获或冒泡的事件流。
