--- a/api/pug/properties/$el.pug
+++ b/api/pug/properties/$el.pug
@@ -1,6 +1,6 @@
-div#property-el.section
+div.section
   header.section__header
-    h3.section__h3 $el
+    h3#property-el.section__h3 $el
   div.section__content
     h4.section__h4 Description
     dl.section__dl
