docs: 调整 docs 打包配置，添加 preload.pug，实现预加载关键资源，优化性能

--- a/api/pug/index.pug
+++ b/api/pug/index.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     include ./meta
     title="delegate.js | 一个轻量级的 JavaScript 事件委托库。"
+    include ./preload
     include ./style
   body
     div#docs.docs
