--- a/api/pug/footer.pug
+++ b/api/pug/footer.pug
@@ -7,8 +7,8 @@ div#footer.main__footer
     |
     a(href="http://creativecommons.org/licenses/by/3.0/") CC BY 3.0
   p
-    a(href="https://github.com/yaohaixiao/autoc.js") View on GitHub
+    a(href="https://github.com/yaohaixiao/delegate.js") View on GitHub
     |  ·
     |
-    a(href="https://github.com/yaohaixiao/autoc.js/issues") Issues
+    a(href="https://github.com/yaohaixiao/delegate.js/issues") Issues
 
