docs: update docs

--- a/api/less/main.less
+++ b/api/less/main.less
@@ -55,24 +55,18 @@
 
   &__button {
     display: inline-block;
-    border: 1px solid @border_color;
     border-radius: 4px;
     padding: 14px 29px;
     font-size: 18px;
     font-family: "Source Code Pro", Consolas, Georgia, Monaco, monospace, Arial, sans-serif;
-    background-color: @bg_color;
+    background-color: @success_color;
     overflow: hidden;
 
     &:link,
     &:visited,
     &:hover {
-      color: @fourth_text_color;
+      color: @white;
       text-decoration: none;
-    }
-
-    &:hover {
-      color: @primary_color;
-      border-color: @primary_color;
     }
   }
 
