--- a/api/pug/cdn.pug
+++ b/api/pug/cdn.pug
@@ -1,4 +1,4 @@
 div#cdn.main__cdn
   pre.main__pre
-    code &lt;script src="https://cdn.jsdelivr.net/gh/yaohaixiao/delegate.js/dist/delegate.min.js"&gt;&lt;/script&gt;
+    code &lt;script src="https://cdn.jsdelivr.net/gh/yaohaixiao/delegate.js/delegate.min.js"&gt;&lt;/script&gt;
 
