feat: core 版本添加 click()、mouseenter()、mouseleave()、change()、createEvent() 和 trigger() 方法
- core 版本添加新方法；
- 调整源代码层次结构；
- 更新 API 代码文档；

--- a/api/less/aside.less
+++ b/api/less/aside.less
@@ -16,10 +16,11 @@
 
   &__h2 {
     margin: 0 auto;
-    height: 64px;
-    line-height: 64px;
-    font-size: 24px;
+    height: 54px;
+    line-height: 54px;
+    font-size: 20px;
     font-weight: normal;
+    font-family: Georgia, Consolas, Arial, sans-serif;
     text-align: center;
     overflow: hidden;
   }
