--- a/api/pug/index.pug
+++ b/api/pug/index.pug
@@ -9,5 +9,5 @@ html(lang="en")
     div#docs.docs
       include ./aside
       include ./main
-    include ./arrows
+    include buttons
     include ./script
