--- a/api/less/buttons.less
+++ b/api/less/buttons.less
@@ -1,22 +1,21 @@
 @import './colors';
 
-.arrows {
+.buttons {
   position: fixed;
   z-index: 2;
   top: 50%;
   right: 12px;
   margin: 0;
-  width: 70px;
+  width: 56px;
   transform: translateY(-50%);
   overflow: hidden;
 
-  &__up,
-  &__down {
+  &__item {
     position: relative;
     z-index: 1;
     margin: 10px;
-    width: 50px;
-    height: 50px;
+    width: 36px;
+    height: 36px;
     border: 1px solid @border_color;
     border-radius: 4px;
     box-shadow: 0 0 6px @border_color;
@@ -28,11 +27,23 @@
     overflow: hidden;
 
     &:hover {
-      color: @primary_color;
+      color: @success_color;
     }
 
     &.hide {
       display: none;
+    }
+  }
+
+  &__anchor {
+    &:link,
+    &:visited,
+    &:hover {
+      color: @fourth_text_color;
+    }
+
+    &:hover {
+      color: @success_color;
     }
   }
 
@@ -41,8 +52,8 @@
     z-index: 2;
     top: 50%;
     left: 50%;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     transform: translate(-50%, -50%);
     fill: currentcolor;
     overflow: hidden;
