--- a/api/pug/aside.pug
+++ b/api/pug/aside.pug
@@ -1,6 +1,6 @@
 aside#aside.aside
   header.aside__header
-    h2.aside__h2 API Docs
+    h2.aside__h2 API Documentation
   nav.aside__nav
     include ./options
     include ./properties
