--- a/api/pug/meta.pug
+++ b/api/pug/meta.pug
@@ -2,3 +2,4 @@ meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 meta(name="keywords" content="delegate.js,JavaScript,Event,Delegate")
 meta(name="description" content="delegate.js 一个轻量级的 JavaScript 事件委托库。")
+link(rel="shortcut icon" href="./favicon.ico")
