--- a/api/less/layout.less
+++ b/api/less/layout.less
@@ -25,6 +25,7 @@
   background-color: @primary_text_color;
   color: @border_color;
   box-shadow: 0 0 5px 2px @border_color;
+  transition-duration: 0.3s;
   overflow: auto;
 }
 
