--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -5,8 +5,10 @@ main#main.main
   include ./download
 
   include examples/section
-  include options/section
-  include properties/section
-  include methods/section
+
+  article#article
+    include options/section
+    include properties/section
+    include methods/section
 
   include ./footer
